--- a/Political-Chrome-Extension/googleExtensionFiles/manifest.json
+++ b/Political-Chrome-Extension/googleExtensionFiles/manifest.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "icons": {"128": "images/icon_128.png"},
     "background": {
-        "scripts": ["scripts/popup.js", "scripts/chart.js"]
+        "scripts": ["scripts/chart.js", "scripts/popup.js"]
     },
     "browser_action": { 
         "default_icon": "images/icon_19.png",
